<resources>
    <string name="app_name">Progressor</string>

    <!-- Splash Screen -->
    <string name="splash_header">Splash Header</string>
    <string name="splash_subHeader">Splash Sub Header</string>
    <string name="splash_login">Login</string>
    <string name="splash_register">Register</string>

    <!-- Slider Screen -->
    <string name="slider_hello">Hello</string>
    <string name="slider_log_out">Log Out</string>

    <!-- Login Screen -->
    <string name="login_emailPlaceholder">&#160;email</string>
    <string name="login_passwordPlaceholder">&#160;password</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_register">Don\'t have an account? Register here.</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_logoDescription">Progressor Logo</string>
    <string name="login_progressor">Progressor</string>
    <string name="login_error_email_not_found">Email not found.</string>
    <string name="login_error_password_incorrect">Password incorrect.</string>

    <!-- Account Create Screen -->
    <string name="account_create_nicknamePlaceholder">&#160;nickname</string>
    <string name="account_create_emailPlaceholder">&#160;email</string>
    <string name="account_create_passwordPlaceholder">&#160;password</string>
    <string name="account_create_register">Register</string>
    <string name="account_create_login">Already have an account? Login here.</string>
    <string name="account_create_error_email_exists">Email already exists.</string>
    <string name="account_create_error_password_weak">Password is weak.</string>
    <string name="account_create_error_display_name_short">Too short.</string>

    <!-- Email Verify -->
    <string name="email_verify_content">Looks like you have not verified your email. Please check your inbox and click the link inside. If you have lost the email, you can re-send it below.</string>
    <string name="email_verify_resend">Re-Send</string>
    <string name="email_verify_back_to_login">Go back to login</string>

    <!-- Password Reset Screen -->
    <string name="password_reset_content">To reset your password, enter your email and check your inbox.</string>
    <string name="password_reset_button">Reset</string>
    <string name="password_reset_error_email_not_found">Email not found.</string>
    <string name="password_reset_error_email_invalid">Email invalid.</string>

    <!-- Profile Create Screen -->
    <string name="profile_create_birthday_value">&#160;&#160;&#8212;/&#8212;/&#8212;&#8212;&#160;&#160;</string>
    <string name="profile_create_continue">Continue</string>
    <string name="profile_create_weight_title">Weight</string>
    <string name="profile_create_height_title">Height</string>
    <string name="profile_create_gender_title">Gender</string>
    <string name="profile_create_birthday_title">Birthday</string>

    <!-- Empty Dashboard Screen -->
    <string name="empty_dashboard_header_title">Select your choice of progression</string>
    <string name="empty_dashboard_continue">Continue</string>
    <string name="empty_dashboard_workout_title">Workout</string>
    <string name="empty_dashboard_workout_info">Choose from a variety of workout programs! You can choose based on your goal, difficulty, length, and review score. For each program you will have an individual progress chart showing your progress over time. It is extremely important to visually see your progression as it helps your state of mind.</string>
    <string name="empty_dashboard_body_title">Body</string>
    <string name="empty_dashboard_body_info">Start tracking your physique and see the incredible results! You can record things like weight, fat percentage, muscle percentage, water percentage, and mood. It is extremely important to visually see your progression as it helps your state of mind.</string>

    <!-- New Body Screen -->
    <string name="new_body_explainer_info">In order to derive to the most accurate results, please fill out the form below. The results have 3% margin of error.</string>
    <string name="new_body_weight">Weight</string>
    <string name="new_body_waist">Waist</string>
    <string name="new_body_wrist">Wrist</string>
    <string name="new_body_hip">Hip</string>
    <string name="new_body_forearm">Forearm</string>
    <string name="new_body_mood">How do you feel?</string>
    <string name="new_body_continue">Continue</string>

    <!-- Body History Screen -->
    <string name="body_history_zero_percent">0%</string>
    <string name="body_history_twenty_percent">0%</string>
    <string name="body_history_fifty_percent">50%</string>
    <string name="body_history_hundred_percent">100%</string>
    <string name="body_history_percent">%1$s%%</string>
    <string name="body_history_ellipsis">&#8230;</string>
    <string name="body_history_legend_muscle">Muscle</string>
    <string name="body_history_legend_fat">Fat</string>

    <!-- Dashboard Screen -->
    <string name="dashboard_legend_muscle">Muscle</string>
    <string name="dashboard_legend_fat">Fat</string>
    <string name="dashboard_legend_bone">Bone</string>
</resources>
