<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/logoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/adequate"
            android:text="@string/login_progressor"
            android:textAlignment="center"
            android:textColor="@color/baseGrey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailValue"
            app:layout_constraintEnd_toEndOf="@+id/loginEmailValue"
            app:layout_constraintStart_toStartOf="@+id/loginEmailValue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoText"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/loginEmailValueError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/baseMaroon"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailValue"
            app:layout_constraintStart_toStartOf="@+id/loginEmailValue" />

        <EditText
            android:id="@+id/loginEmailValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/baseMaroon"
            android:ems="12"
            android:hint="@string/login_emailPlaceholder"
            android:inputType="textEmailAddress"
            android:text="dejiskra@gmail.com"
            android:textColor="@color/baseGrey"
            android:textColorHint="@color/loginPlaceholder"
            android:textCursorDrawable="@color/baseCursor"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordValue"
            app:layout_constraintEnd_toEndOf="@+id/loginSignInButton"
            app:layout_constraintStart_toStartOf="@+id/loginSignInButton" />

        <TextView
            android:id="@+id/loginPasswordValueError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/baseMaroon"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordValue"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordValue"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailValue" />

        <EditText
            android:id="@+id/loginPasswordValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/baseMaroon"
            android:ems="12"
            android:hint="@string/login_passwordPlaceholder"
            android:inputType="textPassword"
            android:text="lol101010"
            android:textColor="@color/baseGrey"
            android:textColorHint="@color/loginPlaceholder"
            android:textCursorDrawable="@color/baseCursor"
            app:layout_constraintBottom_toTopOf="@+id/loginSignInButton"
            app:layout_constraintEnd_toEndOf="@+id/loginSignInButton"
            app:layout_constraintStart_toStartOf="@+id/loginSignInButton" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginSignInButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@color/baseMaroon"
            android:ems="12"
            android:stateListAnimator="@null"
            android:text="@string/login_signIn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginRegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/loginForgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/baseGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSignInButton" />

        <TextView
            android:id="@+id/loginRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login_register"
            android:textColor="@color/baseGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>