<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/logoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/adequate"
            android:text="@string/login_progressor"
            android:textAlignment="center"
            android:textColor="@color/baseGrey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateEmailValue"
            app:layout_constraintEnd_toEndOf="@+id/accountCreateEmailValue"
            app:layout_constraintStart_toStartOf="@+id/accountCreateEmailValue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoText"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/accountCreateDisplayNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/baseMaroon"
            android:ems="12"
            android:hint="@string/account_create_nicknamePlaceholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/baseGrey"
            android:textColorHint="@color/loginPlaceholder"
            android:textCursorDrawable="@color/baseCursor"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateEmailValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/accountCreateDisplayNameValueError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/baseMaroon"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateDisplayNameValue"
            app:layout_constraintStart_toStartOf="@+id/accountCreateDisplayNameValue" />

        <EditText
            android:id="@+id/accountCreateEmailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/baseMaroon"
            android:ems="12"
            android:hint="@string/account_create_emailPlaceholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/baseGrey"
            android:textColorHint="@color/loginPlaceholder"
            android:textCursorDrawable="@color/baseCursor"
            app:layout_constraintBottom_toTopOf="@+id/accountCreatePasswordValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/accountCreateEmailValueError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/baseMaroon"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateEmailValue"
            app:layout_constraintStart_toStartOf="@+id/accountCreateEmailValue" />

        <EditText
            android:id="@+id/accountCreatePasswordValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/baseMaroon"
            android:ems="12"
            android:hint="@string/account_create_passwordPlaceholder"
            android:inputType="textPassword"
            android:textColor="@color/baseGrey"
            android:textColorHint="@color/loginPlaceholder"
            android:textCursorDrawable="@color/baseCursor"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateRegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/accountCreatePasswordValueError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/baseMaroon"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/accountCreatePasswordValue"
            app:layout_constraintStart_toStartOf="@+id/accountCreatePasswordValue" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/accountCreateRegisterButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="60dp"
            android:background="@color/baseMaroon"
            android:ems="12"
            android:stateListAnimator="@null"
            android:text="@string/account_create_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/accountCreateLoginButton"
            app:layout_constraintEnd_toEndOf="@+id/accountCreatePasswordValue"
            app:layout_constraintStart_toStartOf="@+id/accountCreatePasswordValue" />

        <TextView
            android:id="@+id/accountCreateLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/account_create_login"
            android:textColor="@color/baseGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>